--- a/shop/ClientApp/src/app/post-new-ad/post-new-ad.component.html
+++ b/shop/ClientApp/src/app/post-new-ad/post-new-ad.component.html
@@ -1,4 +1,4 @@
-<form #login="ngForm" (ngSubmit)="onClickSubmit(login.value)">
+<form #form="ngForm" (ngSubmit)="onClickSubmit(form.value)">
     <div class="main_content">
         <h5>Подать объявление на OLX</h5>
         <hr>
@@ -7,18 +7,18 @@
                 <label for="title">Заголовок</label>
             </div>
             <div class="col-6">
-                <input class="form-control" required minlength="2" maxlength="30" #title="ngModel" type="text"
+                <input class="form-control" required minlength="10" maxlength="50" #title="ngModel" type="text"
                     name="title" id="title" ngModel>
 
                 <div *ngIf="title.invalid && (title.dirty || title.touched)" class="alert alert-danger">
                     <div *ngIf="title.errors.required">
-                        Title is required.
+                        Добавте заголовок
+                    </div>
+                    <div *ngIf="title.errors.maxlength">
+                        Длина заголовка не больше 50 символов
                     </div>
                     <div *ngIf="title.errors.minlength">
-                        Title cannot be more than 30 characters long.
-                    </div>
-                    <div *ngIf="title.errors.minlength">
-                        Title must be at least 2 characters long.
+                        Длина заголовка минимум 10 символов
                     </div>
                 </div>
 
@@ -28,39 +28,52 @@
             <div class="col-4 text-right">
                 <label for="categoty">Категория</label>
             </div>
-            <select id="category" (change)="filterCategories($event.target.value)">
+            <select name="category" id="category" required #category="ngModel" ngModel (change)="filterCategories($event.target.value)">
                 <option *ngFor="let cat of Categories" value={{cat.categoryId}}>
                     {{cat.name}}
                 </option>
             </select>
+
+            <div *ngIf="category.invalid && (category.dirty || category.touched)" class="alert alert-danger">
+                <div *ngIf="category.errors.required">
+                    Выберите категорию
+                </div>
+            </div>
+            
         </div>
-        <div class="row form-group">
+        <div *ngIf="_subCategories.length > 0" class="row form-group">
             <div class="col-4 text-right">
                 <label for="subCategory">Под категория</label>
             </div>
-            <select id="subCategory" (change)="filterSubCategories($event.target.value)">
-                <option *ngFor="let sub of _subCategories"  value={{sub.subCategoryId}}>
+            <select id="subCategory" name="subCategory" required #subCategory="ngModel" ngModel
+                (change)="filterSubCategories($event.target.value)">
+                <option *ngFor="let sub of _subCategories" value={{sub.subCategoryId}}>
                     {{sub.name}}
                 </option>
             </select>
+        
+            <div *ngIf="categoryChanged" class="alert alert-danger">
+                Выберите подкатегорию
+            </div>
+        
         </div>
         <div class="row form-group">
             <div class="col-4 text-right">
-                <label for="desc">Описание</label>
+                    <label for="desc">Описание</label>
                 </div>
-            <div class="col-6">
-                <textarea required minlength="10" maxlength="1000" #desc="ngModel" class="form-control" required
-                    id="desc" name="desc" ngModel></textarea>
-
-                <div *ngIf="desc.invalid && (desc.dirty || desc.touched)" class="alert alert-danger">
+                <div class="col-6">
+                    <textarea required minlength="50" maxlength="1000" #desc="ngModel" class="form-control" required id="desc"
+                        name="desc" ngModel></textarea>
+            
+                    <div *ngIf="desc.invalid && (desc.dirty || desc.touched)" class="alert alert-danger">
                     <div *ngIf="desc.errors.required">
-                        desc is required.
+                        Добавте описание
+                    </div>
+                    <div *ngIf="desc.errors.maxlength">
+                        Длина описания максимум 1000 символов
                     </div>
                     <div *ngIf="desc.errors.minlength">
-                        desc cannot be more than 1000 characters long.
-                    </div>
-                    <div *ngIf="desc.errors.minlength">
-                        desc must be at least 10 characters long.
+                        Длина описания минимум 50 символов
                     </div>
                 </div>
 
@@ -75,7 +88,7 @@
 
                 <div *ngIf="price.invalid && (price.dirty || price.touched)" class="alert alert-danger">
                     <div *ngIf="price.errors.required">
-                        Price is required
+                        Добавте цену
                     </div>
                 </div>
 
@@ -88,12 +101,18 @@
                 <label for="city">Местоположение</label>
             </div>
             <div class="col-6">
-                <select id="city" (change)="filterCity($event.target.value)">
+                <select id="city" name="city" required #city="ngModel" ngModel (change)="filterCity($event.target.value)">
                     <option *ngFor="let city of cities" value={{city.cityId}}>
                       {{city.name}}
                     </option>
                   </select>
-                  
+
+                  <div *ngIf="city.invalid && (city.dirty || city.touched)" class="alert alert-danger">
+                    <div *ngIf="city.errors.required">
+                        Выберите город
+                    </div>
+                </div>
+                
             </div>
         </div>
         <div class="row form-group">
@@ -101,11 +120,14 @@
                 <label for="phone">Номер телефона</label>
             </div>
             <div class="col-6">
-                <input class="form-control" required #phone="ngModel" type="text" id="phone" name="phone" ngModel>
+                <input class="form-control" required #phone="ngModel" pattern="^\d{3}[-]\d{3}[-]\d{2}[-]\d{2}$" type="text" id="phone" name="phone" ngModel>
 
                 <div *ngIf="phone.invalid && (phone.dirty || phone.touched)" class="alert alert-danger">
                     <div *ngIf="phone.errors.required">
-                        Phone is required
+                        Добавте телефон, например 096-123-45-67
+                    </div>
+                    <div *ngIf="phone.errors?.pattern">
+                        Формат: 096-123-45-67
                     </div>
                 </div>
 
@@ -116,11 +138,14 @@
                 <label for="email">Email-адрес</label>
             </div>
             <div class="col-6">
-                <input class="form-control" required #email="ngModel" type="text" id="email" name="email" ngModel>
+                <input class="form-control" required #email="ngModel" pattern="^\w+[@]\w+[.]\w{2,3}$" type="text" id="email" name="email" ngModel>
 
                 <div *ngIf="email.invalid && (email.dirty || email.touched)" class="alert alert-danger">
                     <div *ngIf="email.errors.required">
-                        email is required
+                        Добавте почту
+                    </div>
+                    <div *ngIf="email.errors?.pattern">
+                        Формат: frodo@gmail.com
                     </div>
                 </div>
 
@@ -131,13 +156,16 @@
                 <label for="name">Контактное лицо</label>
             </div>
             <div class="col-6">
-                <input class="form-control" required #contactPerson="ngModel" type="text" id="contactPerson"
+                <input class="form-control" required #contactPerson="ngModel" pattern="[^0-9]+" type="text" id="contactPerson"
                     name="contactPerson" ngModel>
 
                 <div *ngIf="contactPerson.invalid && (contactPerson.dirty || contactPerson.touched)"
                     class="alert alert-danger">
                     <div *ngIf="contactPerson.errors.required">
-                        contact Name is required
+                        Ваше Имя Фамилия 
+                    </div>
+                    <div *ngIf="contactPerson.errors?.pattern">
+                        Например, Иван Иваныч
                     </div>
                 </div>
 
@@ -145,7 +173,8 @@
         </div>
         <hr>
         <div class="text-right my-3">
-            <input type="submit" class="btn btn-primary" [disabled]="!login.valid" value="Send">
+            <span *ngIf="!form.valid || subCategoryId == 0" class="mx-2" style="color:red;">Заполните все поля</span>
+            <input type="submit" class="btn btn-primary"  [disabled]="!form.valid || subCategoryId == 0" value="Send">
         </div>
     </div>
 </form>
