home page category done

--- a/shop/ClientApp/src/app/home/home.component.css
+++ b/shop/ClientApp/src/app/home/home.component.css
@@ -2,28 +2,76 @@
     background-color: #0098d0;
     border-radius: 5px;
 }
+.gridCategory{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+.gridItem:nth-child(1){
+ grid-row: 1;
+ grid-column: 1;
+}
+.gridItem:nth-child(2){
+    grid-row: 1;
+    grid-column: 2;
+   }
+   .gridItem:nth-child(3){
+    grid-row: 1;
+    grid-column: 3;
+   }
+   .gridItem:nth-child(4){
+    grid-row: 1;
+    grid-column: 4;
+   }
+
+   .gridItem:nth-child(5){
+    grid-row: 3;
+    grid-column: 1;
+   }
+   .gridItem:nth-child(6){
+    grid-row: 3;
+    grid-column: 2;
+   }
+   .gridItem:nth-child(7){
+    grid-row: 3;
+    grid-column: 3;
+   }
+   .gridItem:nth-child(8){
+    grid-row: 3;
+    grid-column: 4;
+   }
+   .gridItem:nth-child(9){
+    grid-row: 3;
+    grid-column: 4;
+   }
+
+   
 
 
 
 
 .category_item{
-    padding-left: 0;
-    ;
+    display: inline-flex;
+    width: 25%;
+    margin: 20px 0;
 }
-.category_item a{
-   
-   display: flex;
-   
-}
+
 .category_item i{
     font-size: 30px;
     background-color: white;
     border-radius:50%;
+    color: salmon;
+    padding: 5px;
+}
+
+.category_item div{
+    cursor: pointer;
 }
 .category_item span{
-    font-size: 15px;
-    align-self: center;
+    font-size: 14px;
+    vertical-align: super;
     font-weight: 600;
+    padding-left: 5px;
 }
 
 
@@ -50,8 +98,8 @@
 
 .list_of_Items ul li{
     margin-top: 30px;
-    padding-right: 10px;
-    width: 30%;
+    padding-right: 5px;
+    width: 33%;
     
 }
 
