--- a/shop/ClientApp/src/app/home/home.component.html
+++ b/shop/ClientApp/src/app/home/home.component.html
@@ -1,9 +1,3 @@
-<script>
-  function ShowList(){
-    console.log("ddw");
-  }
-</script>
-
 <div class="mt-4">
   <div class="main_content">
     <!-- search form: -->
@@ -12,317 +6,96 @@
         <div class="col-5 pl-0">
           <div class="input_with_Icon">
             <i class="fa fa-search" aria-hidden="true"></i>
-            <input type="search" autofocus name="search" id="search" ngModel class="form-control" placeholder="13 350 115 объявлений рядом">
+            <input type="search" autofocus name="search" id="search" ngModel class="form-control"
+              placeholder="{{adsTotalCount}} объявлений рядом">
           </div>
         </div>
         <div class="col-5 px-0 input_with_Icon">
           <i class="fa fa-map-marker" aria-hidden="true"></i>
-          
-          <select name="city" id="city" #city="ngModel" ngModel> 
-            <option value="0">Вся Украина</option>
-            <option *ngFor="let city of cities" value={{city.cityId}}> 
+
+          <select name="city" id="city" #city="ngModel" ngModel>
+            <option [ngValue]="0">Вся Украина</option>
+            <option *ngFor="let city of cities" [ngValue]="city.cityId">
               {{city.name}}
             </option>
-          </select> 
-
+          </select>
         </div>
         <div class="col-2 pr-0 input_with_Icon">
-          
-            <input type="submit" value="Send" class="btn btn-primary">
-          
+          <input type="submit" value="Send" class="btn btn-primary">
         </div>
       </div>
     </form>
-    <!-- categories: -->
-    <div class="py-4">
-      <!-- 1 categories row: -->
-      
-        <div *ngFor="let category of categories" class="col-3 category_item">
-          <a>
-            <i class="fa fa-child p-2" aria-hidden="true" style="color: salmon;"></i> 
-            <span class="pl-2" (click)="ItemClicked(category.categoryId, 0)" >{{category.name}}</span>
-          </a>
-        </div>
-        <!-- <div class="col-3 category_item">
-          <a>
-            <i class="fa fa-home p-2" aria-hidden="true" style="color: royalblue;"></i>
-            <span class="pl-2" (click)="ItemClicked()">Недвижимость</span>
-          </a>
-        </div>
-        <div class="col-3 category_item">
-          <a href="#category_3">
-            <i class="fa fa-car p-2" aria-hidden="true" style="color: orange;"></i>
-            <span class="pl-2">Транспорт</span>
-          </a>
-        </div>
-        <div class="col-3 category_item">
-          <a href="#category_4" >
-            <i class="fa fa-cog p-2" aria-hidden="true" style="color: green;"></i>
-            <span class="pl-2">Запчасти для транспорта</span>
-          </a>
-        </div> -->
-      
 
-      <!-- lists for 1 row category 1: -->
-      <div  class="p-4 my-3 list_of_Items">
-        <i class="fa fa-chevron-right" aria-hidden="true"></i>
-        <a href="#">Смотреть все объявления</a>
-        <span class="ml-2">в Детский мир</span>
-        <hr>
-        <ul class="row">
-          <li *ngFor="let subcat of subCategories">
-              <i class="fa fa-chevron-right"  aria-hidden="true"></i>
-              <a (click)="ItemClicked(categoryId, subcat.subCategoryId)" >{{subcat.name}}</a>
-          </li>
-        </ul>
-      </div>
 
-       <!-- lists for 1 row category 2:
-       <div id="category_2" class="p-4 my-3 list_of_Items" style="display: block;">
-        <i class="fa fa-chevron-right" aria-hidden="true"></i>
-        <a href="#">Смотреть все объявления</a>
-        <span class="ml-2">в Недвижимость</span>
-        <hr>
-        <ul class="row">
-          <li *ngFor="let item of subCategories | category: '2'">
-            <i class="fa fa-chevron-right"  aria-hidden="true"></i>
-            <a href="/search?subCategoryId={{item.subCategoryId}}">{{item.name}}</a>
-        </li>
-        </ul>
-      </div> -->
-
-       <!-- lists for 1 row category 3:
-       <div id="category_3" class="p-4 my-3 list_of_Items" >
-        <i class="fa fa-chevron-right" aria-hidden="true"></i>
-        <a href="#">Смотреть все объявления</a>
-        <span class="ml-2">в Транспорт</span>
-        <hr>
-        <ul class="row">
-          <li *ngFor="let item of subCategories | category: '3'">
-            <i class="fa fa-chevron-right"  aria-hidden="true"></i>
-            <a href="/search?subCategoryId={{item.subCategoryId}}">{{item.name}}</a>
-        </li>
-        </ul>
-      </div> -->
-
-       <!-- lists for 1 row category 4: -->
-       <!-- <div id="category_4" class="p-4 my-3 list_of_Items" >
-        <i class="fa fa-chevron-right" aria-hidden="true"></i>
-        <a href="#">Смотреть все объявления</a>
-        <span class="ml-2">в Запчасти для транспорта</span>
-        <hr>
-        <ul class="row">
-          <li *ngFor="let item of subCategories | category: '4'">
-            <i class="fa fa-chevron-right"  aria-hidden="true"></i>
-            <a href="/search?subCategoryId={{item.subCategoryId}}">{{item.name}}</a>
-        </li>
-        </ul>
-      </div> -->
-
-      <!-- 2-nd categories row: -->
-      <!-- <div class="row my-4">
-        <div class="col-3 category_item">
-          <a href="#category_5">
-            <i class="fa fa-briefcase p-2" aria-hidden="true" style="color: greenyellow;"></i>
-            <span class="pl-2">Работа</span>
-          </a>
-        </div>
-        <div class="col-3 category_item">
-          <a href="#category_6">
-            <i class="fa fa-paw p-2" aria-hidden="true" style="color: #84d0f0;"></i>
-            <span class="pl-2">Животные</span>
-          </a>
-        </div>
-        <div class="col-3 category_item">
-          <a href="#category_7">
-            <i class="fa fa-envira p-2" aria-hidden="true" style="color: #009896;"></i>
-            <span class="pl-2">Дом и сад</span>
-          </a>
-        </div>
-        <div class="col-3 category_item">
-          <a href="#category_8">
-            <i class="fa fa-calculator p-2" aria-hidden="true" style="color: #00cc5e;"></i>
-            <span class="pl-2">Электроника</span>
-          </a>
+  
+    <!-- this generates category row (4 in the row)-->
+    <div *ngFor="let categoryArray of categoryArray_all">
+      <div *ngFor="let category of categoryArray" class="category_item">
+        <div>
+          <!-- adds class style for icon (for each category different icon and color) -->
+          <i *ngFor="let style of styleCategory | category: category.categoryId" class="{{style.iconClass}}"
+            aria-hidden="true" [style.color]="style.color"></i>
+          <span (click)="ShowList(category.categoryId)">{{category.name}}</span>
         </div>
       </div>
-
-     <!-- lists for 2 row category 1: -->
-     <!-- <div id="category_5" class="p-4 my-3 list_of_Items" >
-      <i class="fa fa-chevron-right" aria-hidden="true"></i>
-      <a href="#">Смотреть все объявления</a>
-      <span class="ml-2">в Работа</span>
-      <hr>
-      <ul class="row">
-        <li *ngFor="let item of subCategories | category: '5'">
-          <i class="fa fa-chevron-right"  aria-hidden="true"></i>
-          <a href="/search?subCategoryId={{item.subCategoryId}}">{{item.name}}</a>
-      </li>
-      </ul>
-    </div> --> -->
-
-    <!-- lists for 2 row category 2: -->
-    <!-- <div id="category_6" class="p-4 my-3 list_of_Items" >
-      <i class="fa fa-chevron-right" aria-hidden="true"></i>
-      <a href="#">Смотреть все объявления</a>
-      <span class="ml-2">в Животные</span>
-      <hr>
-      <ul class="row">
-        <li *ngFor="let item of subCategories | category: '6'">
-          <i class="fa fa-chevron-right"  aria-hidden="true"></i>
-          <a href="/search?subCategoryId={{item.subCategoryId}}">{{item.name}}</a>
-      </li>
-      </ul>
-    </div> -->
-
-    <!-- lists for 2 row category 3: -->
-    <!-- <div id="category_7" class="p-4 my-3 list_of_Items" >
-      <i class="fa fa-chevron-right" aria-hidden="true"></i>
-      <a href="#">Смотреть все объявления</a>
-      <span class="ml-2">в Дом и сад</span>
-      <hr>
-      <ul class="row">
-        <li *ngFor="let item of subCategories | category: '7'">
-          <i class="fa fa-chevron-right"  aria-hidden="true"></i>
-          <a href="/search?subCategoryId={{item.subCategoryId}}">{{item.name}}</a>
-      </li>
-      </ul>
-    </div> -->
-
-<!-- lists for 2 row category 4: -->
-<!-- <div id="category_8" class="p-4 my-3 list_of_Items" >
-  <i class="fa fa-chevron-right" aria-hidden="true"></i>
-  <a href="#">Смотреть все объявления</a>
-  <span class="ml-2">в Электроника</span>
-  <hr>
-  <ul class="row">
-    <li *ngFor="let item of subCategories | category: '8'">
-      <i class="fa fa-chevron-right"  aria-hidden="true"></i>
-      <a href="/search?subCategoryId={{item.subCategoryId}}">{{item.name}}</a>
-  </li>
-  </ul>
-</div> -->
-
-
-      <!-- 3-nd categories row: -->
-      <!-- <div class="row my-4">
-        <div class="col-3 category_item">
-          <a href="#category_9">
-            <i class="fa fa-wrench p-2" aria-hidden="true" style="color: #1865b2;"></i>
-            <span class="pl-2">Бизнес и услуги</span>
-          </a>
+      <!-- this generates subcategory items for each category -->
+      <div *ngFor="let category of categoryArray" [hidden] = "ShowOrHide(category.categoryId)">
+        <div class="p-4 my-3 list_of_Items">
+          <i class="fa fa-chevron-right" aria-hidden="true"></i>
+          <a href="javascript:void" (click)="ItemClicked(category.categoryId, 0)">Смотреть все объявления</a>
+          <span class="ml-2">в {{category.name}}</span>
+          <hr>
+          <ul class="row">
+            <!-- filtering by category -->
+            <li *ngFor="let subcat of subCategories | category: category.categoryId">
+              <i class="fa fa-chevron-right" aria-hidden="true"></i>
+              <a href="javascript:void"
+                (click)="ItemClicked(category.categoryId, subcat.subCategoryId)">{{subcat.name}}</a>
+            </li>
+          </ul>
         </div>
-        <div class="col-3 category_item">
-          <a href="#category_10">
-            <i class="fa fa-scissors p-2" aria-hidden="true" style="color: #86267e;"></i>
-            <span class="pl-2">Мода и стиль</span>
-          </a>
-        </div>
-        <div class="col-3 category_item">
-          <a href="#category_11">
-            <i class="fa fa-bicycle p-2" aria-hidden="true" style="color: #bd6416;"></i>
-            <span class="pl-2">Хобби, отдых и спорт</span>
-          </a>
-        </div>
-        <div class="col-3 category_item">
-          <a href="#">
-            <i class="fa fa-money p-2" aria-hidden="true" style="color: red;"></i>
-            <span class="pl-2">Отдам даром</span>
-          </a>
-        </div>
-      </div> -->
-
-      <!-- lists for 3 row category 1: -->
-      <!-- <div id="category_9" class="p-4 my-3 list_of_Items" >
-        <i class="fa fa-chevron-right" aria-hidden="true"></i>
-        <a href="#">Смотреть все объявления</a>
-        <span class="ml-2">в Бизнес и услуги</span>
-        <hr>
-        <ul class="row">
-          <li *ngFor="let item of subCategories | category: '9'">
-            <i class="fa fa-chevron-right"  aria-hidden="true"></i>
-            <a href="/search?subCategoryId={{item.subCategoryId}}">{{item.name}}</a>
-        </li>
-        </ul>
-      </div> -->
-
-      <!-- lists for 3 row category 2: -->
-      <!-- <div id="category_10" class="p-4 my-3 list_of_Items" >
-        <i class="fa fa-chevron-right" aria-hidden="true"></i>
-        <a href="#">Смотреть все объявления</a>
-        <span class="ml-2">в Мода и стиль</span>
-        <hr>
-        <ul class="row">
-          <li *ngFor="let item of subCategories | category: '10'">
-            <i class="fa fa-chevron-right"  aria-hidden="true"></i>
-            <a href="/search?subCategoryId={{item.subCategoryId}}">{{item.name}}</a>
-        </li>
-        </ul>
-      </div> -->
-
-      <!-- lists for 3 row category 3: -->
-      <!-- <div id="category_11" class="p-4 my-3 list_of_Items" >
-        <i class="fa fa-chevron-right" aria-hidden="true"></i>
-        <a href="#">Смотреть все объявления</a>
-        <span class="ml-2">в Хобби, отдых и спорт</span>
-        <hr>
-        <ul class="row">
-          <li *ngFor="let item of subCategories | category: '11'">
-            <i class="fa fa-chevron-right"  aria-hidden="true"></i>
-            <a href="/search?subCategoryId={{item.subCategoryId}}">{{item.name}}</a>
-        </li>
-        </ul>
-      </div> -->
-
-      
-
-
-      <!-- 4-th categories row: -->
-      <!-- <div class="row my-4">
-        <div class="col-3 category_item">
-          <a href="#">
-            <i class="fa fa-handshake-o p-2" aria-hidden="true" style="color: #c9d72a;"></i>
-            <span class="pl-2">Обмен</span>
-          </a>
-        </div>
-      </div> -->
-
-    
+      </div>
     </div>
-  </div>
 
-  <!-- vip ads: -->
-  <div style="background-color: white;padding-top: 20px;">
-    <div class="main_content">
-      <h5>VIP-ОБЪЯВЛЕНИЯ</h5>
-      <div class="row">
-        <div *ngFor="let item of ads" class="ads card">
-          <a href="/details?id={{item.adId}}">
-            <img
-              src="https://cache.pressmailing.net/thumbnail/story_big/717fc4de-eb28-4066-8019-b65a007b230c/prominenter-preis-f-r-das-pony-car-ford-mustang-edition-bullitt-ist-das-auto-bild-sportscar-des-jahr"
-              class="card-img-top">
-          </a>
-          <div class="card-body py-1 px-2">
-            <div>
-              <a href="/details?id={{item.adId}}">{{item.title}}</a>
-            </div>
-            <div class="card-text" style="display: flex;justify-content: space-between;align-items: center;">
-              <span>{{item.price}} uah</span>
-              <i class="fa fa-star-o star" aria-hidden="true"></i>
-            </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+<!-- vip ads: -->
+<div style="background-color: white;padding-top: 20px;">
+  <div class="main_content">
+    <h5>VIP-ОБЪЯВЛЕНИЯ</h5>
+    <div class="row">
+      <div *ngFor="let item of ads" class="ads card">
+        <a href="/details?id={{item.adId}}">
+          <img
+            src="https://cache.pressmailing.net/thumbnail/story_big/717fc4de-eb28-4066-8019-b65a007b230c/prominenter-preis-f-r-das-pony-car-ford-mustang-edition-bullitt-ist-das-auto-bild-sportscar-des-jahr"
+            class="card-img-top">
+        </a>
+        <div class="card-body py-1 px-2">
+          <div>
+            <a href="/details?id={{item.adId}}">{{item.title}}</a>
+          </div>
+          <div class="card-text" style="display: flex;justify-content: space-between;align-items: center;">
+            <span>{{item.price}} uah</span>
+            <i class="fa fa-star-o star" aria-hidden="true"></i>
           </div>
         </div>
       </div>
-      
-      <div class="text-right py-5">
-        <a href="#">
-          <span>Посмотреть все</span>
-          <i class="fa fa-chevron-right ml-2" aria-hidden="true"></i>
-        </a>
-      </div>
-      
-      
     </div>
-  </div>
 
+    <div class="text-right py-5">
+      <a href="#">
+        <span>Посмотреть все</span>
+        <i class="fa fa-chevron-right ml-2" aria-hidden="true"></i>
+      </a>
+    </div>
+
+
+  </div>
 </div>
